<resources>
    <string name="app_name">Brain Teaser</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full name</string>
    <string name="logout">Logout</string>
    <string name="explore">Explore</string>
    <string name="quizzes">Quizzes</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hi">Hi</string>
    <string name="reward_points">Reward Points</string>
    <string name="player_profile_mascot">player profile mascot</string>
    <string name="player_badge">player badge</string>
    <string name="start_quiz">Start quiz</string>
    <string name="user_name">User Name</string>
    <string name="reward_points_value">3500</string>
    <string name="profileIcon">TODO</string>
    <string name="next_level">Next Level</string>
    <string name="rank">C/I Rank</string>
    <string name="leaderboard">Leaderboard</string>
</resources>