<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor"
    tools:context=".ui.home.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/homePageUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/user_name"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="224dp"
            android:layout_height="199dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/homePageUserName"
            android:src="@drawable/rhythmic_gymnastics"
            android:layout_centerHorizontal="true"/>

        <TableLayout
            android:id="@+id/overviewTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:layout_marginTop="50dp"
            android:layout_below="@id/profileImage"
            >
            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:divider="#FFFFFF"
                android:showDividers="middle"
                >

                <LinearLayout
                    android:id="@+id/second_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    >

                    <ImageView
                        android:id="@+id/rankImage"
                        android:layout_width="48dp"
                        android:layout_height="38dp"
                        android:contentDescription="@string/player_badge"
                        android:src="@drawable/podium"
                        tools:ignore="ImageContrastCheck"
                        />

                    <TextView
                        android:id="@+id/rank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rank"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:layout_below="@+id/rankImage" />

                    <TextView
                        android:id="@+id/rankValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF"
                        android:layout_below="@+id/rank" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/first_text"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_marginRight="10dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="48dp"
                        android:layout_height="38dp"
                        android:contentDescription="@string/player_badge"
                        android:src="@drawable/medal"
                        tools:ignore="ImageContrastCheck"
                        />

                    <TextView
                        android:id="@+id/rewardPointsString"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reward_points"
                        android:textSize="16sp"
                        android:textColor="#FFFFFF"
                        android:layout_below="@+id/imageView" />

                    <TextView
                        android:id="@+id/rewardValueHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reward_points_value"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF"
                        android:layout_below="@+id/rewardPointsString" />

                </LinearLayout>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/overviewTable">
            <Button
                android:id="@+id/startQuiz"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:layout_marginBottom="104dp"
                android:text="@string/start_quiz"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@android:color/white"
                android:textColor="@color/black"
                android:layout_marginRight="20dp"/>

            <Button
                android:id="@+id/logOut"
                android:backgroundTint="@android:color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginBottom="104dp"
                android:layout_marginRight="20dp"
                android:text="@string/logout"
                android:layout_marginTop="34dp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@+id/startQuiz"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>